# AIProject

./: README.md
C++Flv-player/: CMakeLists.txt  README.md  build.bat  build.sh  build_macos.sh  main.cpp  set_permissions.sh  setup_and_build.sh
SnapTool/: README.md  go.mod  main.go  snap
TTS/: CMakeLists.txt  README.md  test.txt
TTS/include/: TTSProcessor.h
TTS/src/: TTSProcessor.cpp  main.cpp
WaterMarkRemove/: README.md  watermark_remover.py
ffmpeg-go/: INSTALL.md  Makefile  README.md  build.sh  go.mod  set-permissions.sh  test.sh
ffmpeg-go/cmd/ffmpeg-go/: main.go
ffmpeg-go/examples/decode/: main.go
ffmpeg-go/examples/info/: main.go
ffmpeg-go/examples/transcode/: main.go
ffmpeg-go/ffmpeg/: decoder.go  ffmpeg.go  ffmpeg_test.go  utils.go
rtp_demo/: README.md  build.sh  clean_build.sh  client  client.go  go.mod  run_client.sh  run_server.sh  server  server.go  test_build.sh
